[package]
name = "jack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
clap = { version = "4.5.4", features = ["derive"] }
klex = { git = "https://www.github.com/sanj0/klex.git", branch = "main" }
thiserror = "1.0.58"
